# platform_detections

./: .gitignore  README.md  platform_detection_results.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: public-security.yml  publish-to-pypi.yml
examples/: quant_finance.py
platform_detection/: __init__.py  constants.py  orchestrator.py  utils.py
platform_detection.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
platform_detection/detectors/: __init__.py  hardware.py  software.py
platform_detection/detectors/os/: darwin.py  linux.py  windows.py
platform_detections/: __init__.py  cli.py  orchestrator.py  utils.py
platform_detections/detectors/: __init__.py  base.py  hardware.py  software.py
platform_detections/detectors/os/: __init__.py  darwin.py  linux.py
tests/: test.py  test_linux_detector.py
